# topos

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
crates/topos-cli/: Cargo.toml  README.md
crates/topos-cli/src/: args.rs  inputs.rs  main.rs  matches.rs  outputs.rs
crates/topos-lib/: Cargo.toml
crates/topos-lib/doc/: segments.excalidraw
crates/topos-lib/src/: lib.rs
crates/topos-lib/src/data/: books.rs  chapter_verses.rs  data.rs  default_books.json  default_genres.json  genres.rs  mod.rs
crates/topos-lib/src/filter/: books.rs  data.rs  default_genres.json  filter.rs  genres.rs  mod.rs  testaments.rs
crates/topos-lib/src/filter/filters/: book.rs  genre.rs  mod.rs  testament.rs
crates/topos-lib/src/matcher/: instance.rs  matcher.rs  matches.rs  mod.rs
crates/topos-lib/src/matcher/location/: html.rs  line_col.rs  mod.rs  pdf.rs  srt.rs
crates/topos-lib/src/segments/: autocomplete.rs  mod.rs  parse.rs  segment.rs  segments.rs  verse_bounds.rs
crates/topos-lib/src/segments/autocomplete/: completer.rs  full.rs  incomplete.rs  input.rs  joiner.rs  mod.rs  output.rs  segment.rs  suggestion.rs
crates/topos-lib/src/segments/formatter/: context.rs  mod.rs  options.rs  segments.rs  token.rs
crates/topos-lib/src/segments/parser/: components.rs  minimal.rs  mod.rs  roman_numeral.rs  verbose.rs
crates/topos-lib/src/segments/parser/verbose/: components.rs  len.rs  mod.rs
crates/topos-lib/src/segments/units/: chapter_range.rs  chapter_verse.rs  chapter_verse_range.rs  full_chapter.rs  full_chapter_range.rs  full_chapter_verse_range.rs  mod.rs  parse.rs  range_pair.rs
crates/topos-lib/tests/srt/: Chapter 1 - The Command of Christ transcript.srt  mod.rs
crates/topos-parser/: Cargo.toml
crates/topos-parser/src/: components.rs  lib.rs  minimal.rs  roman_numerals.rs  spanned.rs  spanned_length.rs  verbose.rs
crates/topos-pdf/: Cargo.toml
crates/topos-pdf/src/: lib.rs
crates/topos-py/: Cargo.toml  README.md  pyproject.toml  test.py
crates/topos-py/src/: lib.rs
crates/topos-ts/: Cargo.toml  README.md
crates/topos-ts/src/: lib.rs
