[package]
name = "topos-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "from", "into_iterator"] }
itertools = "0.14.0"
line-col = "0.2.1"
once_cell = "1.21.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.141"
