[package]
name = "topos-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "from", "into_iterator"] }
line-col = "0.2.1"
constcat = "0.6.1"

topos-parser = { path = "../topos-parser"}

# workspace dependencies
once_cell = { workspace = true }
regex = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
