[package]
name = "topos-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "from", "into_iterator"] }
line-col = "0.2.1"
constcat = "0.6.1"

# topos-parser = { path = "../topos-parser"}
chumsky = "0.10.1"
from_nested_tuple = { git = "https://github.com/MasterTemple/from_nested_tuple" }

# workspace dependencies
once_cell = { workspace = true }
regex = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
htmloc = { workspace = true }
thiserror = { workspace = true }

# optional dependencies
mupdf = { version = "0.4.4", optional = true }
unicode-normalization = "0.1.25"

[features]
default = ["pdf"]
pdf = ["dep:mupdf"]


