[package]
name = "topos-py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "topos"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
# pyo3 = { version = "0.25.1", features = ["extension-module"] }
topos-lib = { path = "../topos-lib" }
